Fix PWA paths for GitHub Pages

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "name": "Niels NV",
     "short_name": "Niels NV",
     "description": "Uw betrouwbare partner in betonproductie",
-    "start_url": "/",
+    "start_url": "/niels-nv/",
+    "scope": "/niels-nv/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#ffffff",
