Fix PWA icon and standalone mode issues

--- a/manifest.json
+++ b/manifest.json
@@ -5,18 +5,22 @@
     "start_url": "/niels-nv/",
     "scope": "/niels-nv/",
     "display": "standalone",
+    "orientation": "portrait",
     "background_color": "#ffffff",
     "theme_color": "#ffffff",
     "icons": [
         {
-            "src": "icons/icon-192x192.png",
+            "src": "/niels-nv/icons/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
-            "src": "icons/icon-512x512.png",
+            "src": "/niels-nv/icons/icon-512x512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
-    ]
+    ],
+    "prefer_related_applications": false
 } 
